fixed bug where search modal would be hidden under the sticky header of the products table when scrolled

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -529,7 +529,7 @@ textarea {
         }
     }
     &.active {
-        z-index: 2;
+        z-index: 99;
         > .modal,
         > .overlay {
             display: block;
